--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,19 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion versions.targetSdk
+    compileSdkVersion sdk.compile
     buildToolsVersion versions.buildTools
 
     defaultConfig {
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.targetSdk
-        versionName versions.name
-    }
-
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-        test.java.srcDirs += 'src/test/kotlin'
+        minSdkVersion sdk.min
+        targetSdkVersion sdk.target
+        versionName versions.goldfinger
     }
 
     testOptions {
@@ -23,7 +17,6 @@ android {
 
 dependencies {
     implementation "com.android.support:appcompat-v7:${versions.google}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.10.0'
 }
