--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     ]
 
     ext.versions = [
-            goldfinger: '0.3.3',
+            goldfinger: '1.0.0-rc1',
             buildTools: '26.0.2',
             google    : '27.0.2'
     ]
