--- a/rx/src/main/AndroidManifest.xml
+++ b/rx/src/main/AndroidManifest.xml
@@ -1,1 +1,7 @@
-<manifest package="co.infinum.rx"/>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="co.infinum.goldfinger.rx">
+
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
+</manifest>
