--- a/rx/bintray.gradle
+++ b/rx/bintray.gradle
@@ -15,11 +15,13 @@ publishing {
                 def root = asNode()
                 def dependenciesNode = root.appendNode('dependencies')
 
-                // Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
                 configurations.implementation.allDependencies.each {
-                    // Ensure dependencies such as fileTree are not included in the pom.
-                    if (it.name != 'unspecified') {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    if (it.name == 'core') {
+                        dependencyNode.appendNode('groupId', 'co.infinum')
+                        dependencyNode.appendNode('artifactId', 'goldfinger')
+                        dependencyNode.appendNode('version', versions.goldfinger)
+                    } else {
                         dependencyNode.appendNode('groupId', it.group)
                         dependencyNode.appendNode('artifactId', it.name)
                         dependencyNode.appendNode('version', it.version)
