--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -11,7 +11,7 @@ android {
 }
 
 dependencies {
-    implementation project(":core")
+    implementation project(':core')
     implementation deps.appcompat
     implementation deps.rxjava
     testImplementation deps.junit
