--- a/example/build.gradle
+++ b/example/build.gradle
@@ -11,8 +11,8 @@ android {
 }
 
 dependencies {
-    implementation deps.appcompat
-    implementation deps.rxjava
+    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
+    implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
     implementation project(':core')
     implementation project(':rx')
 //    implementation "co.infinum:goldfinger:${versions.goldfinger}"
