--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,16 @@
 buildscript {
 
     ext.sdk = [
-        min   : 16,
-        target: 27,
+        min   : 14,
+        target: 28,
     ]
 
     ext.versions = [
-        goldfinger: '1.1.2',
-        google    : '27.1.1',
+        appcompat: '1.0.2',
+        goldfinger: '1.2.0',
         junit     : '4.12',
         mockito   : '2.10.0',
         rxjava    : '2.1.13'
-    ]
-
-    ext.deps = [
-        appcompat: "com.android.support:appcompat-v7:${versions.google}",
-        junit    : "junit:junit:${versions.junit}",
-        mockito  : "org.mockito:mockito-core:${versions.mockito}",
-        rxjava   : "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
     ]
 
     repositories {
@@ -26,8 +19,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
