--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.infinum.example">
+    xmlns:tools="http://schemas.android.com/tools" package="co.infinum.example">
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".ChooseImplementationActivity">
             <intent-filter>
@@ -19,6 +20,8 @@
         <activity android:name=".RxLoginActivity" android:screenOrientation="portrait"/>
         <activity android:name=".SettingsActivity" android:screenOrientation="portrait"/>
         <activity android:name=".RxSettingsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PaymentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".RxPaymentActivity" android:screenOrientation="portrait"/>
 
     </application>
 
