--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.infinum.example">
+    xmlns:tools="http://schemas.android.com/tools" package="co.infinum.example">
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".ChooseImplementationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".ExampleActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".RxExampleActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SetPinActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".RxLoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SettingsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".RxSettingsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PaymentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".RxPaymentActivity" android:screenOrientation="portrait"/>
 
     </application>
 
