--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.versions = [
         appcompat : '1.1.0',
         biometric : '1.0.0',
-        goldfinger: '2.0.0-RC3',
+        goldfinger: '2.0.0',
         junit     : '4.12',
         mockito   : '2.28.2',
         rxjava    : '2.2.12',
