--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ buildscript {
 
     ext.sdk = [
         min   : 14,
-        target: 29,
+        target: 30,
     ]
 
     ext.versions = [
         appcompat : '1.1.0',
-        biometric : '1.0.1',
+        biometric : '1.1.0-rc01',
         goldfinger: '2.0.1',
         junit     : '4.12',
         mockito   : '2.28.2',
