--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 
     ext.versions = [
         appcompat : '1.1.0',
-        biometric : '1.1.0-rc01',
+        biometric : '1.1.0',
         goldfinger: '2.0.1',
         junit     : '4.12',
         mockito   : '2.28.2',
