--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
     ext.versions = [
         appcompat : '1.1.0',
-        biometric : '1.1.0',
+        biometric : '1.2.0-alpha04',
         goldfinger: '2.1.0',
         junit     : '4.12',
         mockito   : '2.28.2',
