Add hasBiometricHardware and hasEnrolledBiometrics, annotate methods containing `fingerprint` with deprecated annotation

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${versions.appcompat}"
     testImplementation "junit:junit:${versions.junit}"
     testImplementation "org.mockito:mockito-core:${versions.mockito}"
+    testImplementation project(path: ':core')
 }
 
 apply from: '../tasks.gradle'
