--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,6 +21,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
     implementation project(':core')
     implementation project(':rx')
-//    implementation "co.infinum:goldfinger:${versions.goldfinger}"
-//    implementation "co.infinum:goldfinger-rx:${versions.goldfinger}"
+//    implementation "com.infinum:goldfinger:${versions.goldfinger}"
+//    implementation "com.infinum:goldfinger-rx:${versions.goldfinger}"
 }
